Update configs for paper

--- a/configs/plots/papers/G336.01-0.82_continuum_c8.cfg
+++ b/configs/plots/papers/G336.01-0.82_continuum_c8.cfg
@@ -39,14 +39,16 @@ loc = 0 0
 image = ${basedir}/G336.01-0.82.config8.cont_avg.selfcal_0.5_hogbom.image.fits
 center = 16h35m09.261s -48d46m47.66s icrs
 radius = 0.8 arcsec
-stretch = log
+stretch = linear
 set_xlabel = false
 # Contours
 self_contours = true
 contour_colors = #7f7f7f
+contour_stretch = log
 #contour_linewidth = 0.5
 negative_nsigma = 3
-vmin = 0.001 mJy/beam
+#vmin = 0.001 mJy/beam
+vmin = 0.0 mJy/beam
 vmax = 7.0 mJy/beam
 a = 100
 # Beam
@@ -74,14 +76,16 @@ loc = 0 1
 image = ${basedir}/G336.01-0.82.config8.cont_avg.selfcal_0.5_hogbom.image.fits
 center = 16h35m09.261s -48d46m47.66s icrs
 radius = 0.8 arcsec
-stretch = log
+stretch = linear
 ticks_color = w
 # Contours
 self_contours = true
 contour_colors = #7f7f7f
+contour_stretch = log
 #contour_linewidth = 0.5
 negative_nsigma = 3
-vmin = 0.001 mJy/beam
+#vmin = 0.001 mJy/beam
+vmin = 0.0 mJy/beam
 vmax = 7.0 mJy/beam
 a = 100
 # Beam
@@ -124,14 +128,16 @@ loc = 0 2
 image = ${basedir}/G336.01-0.82.config8.cont_avg.selfcal_0.5_hogbom.image.fits
 center = 16h35m09.261s -48d46m47.66s icrs
 radius = 0.8 arcsec
-stretch = log
+stretch = linear
 ticks_color = w
 # Contours
 self_contours = true
 contour_colors = #7f7f7f
+contour_stretch = log
 #contour_linewidth = 0.5
 negative_nsigma = 3
-vmin = 0.001 mJy/beam
+#vmin = 0.001 mJy/beam
+vmin = 0.0 mJy/beam
 vmax = 7.0 mJy/beam
 a = 100
 # Beam
