--- a/configs/plots/papers/G336.01-0.82_pv_maps_ch3oh.cfg
+++ b/configs/plots/papers/G336.01-0.82_pv_maps_ch3oh.cfg
@@ -57,12 +57,15 @@ vlines_color = #35ff2c
 
 [pvmap_model]
 loc = 0 0
-pvmap_contour = /home/users/folguin/clones/feria_G336/version1/images/dens_1e-2/G336-Vsys-47.2_LineCH3OH_Pix0.004as0.1kmps_D3100M10CB300I65.PA125Rot1Rout1000.Rin300_IRE-T1Flare30Nprof-1.5Tprof-0.4_Kep-T0.5Flare30Nprof-1.5Tprof-0.4_LW1.0_Beam0.0692x0.0517PA-29.07_PV-PA125deg-CentRA0.Dec0..fits
+pvmap_contour = /home/users/folguin/clones/feria_G336/large_grid_rout800/G336-Vsys-47.2_LineCH3OH_Pix0.004as0.1kmps_D3100M10CB200.I65.PA125Rot1Rout800.Rin200._IRE-T0.Flare30Nprof-1.5Tprof-0.4_Kep-T0.5Flare30Nprof-1.5Tprof-0.4_LW1.0_Beam0.0692x0.0517PA-29.07_PV-PA125deg-CentRA0.Dec0..fits
 contour_colors = #0c99ff
 contour_linewidth = 1
 unit = mJy/beam
 #rms = 0.82 mJy/beam
-rms = 1.2 mJy/beam
+#rms = 1.2 mJy/beam
+# Observed max is 0.03192 Jy -> 26.6 * 1.2mJy
+# Model max 0.68789 Jy -> 26.6 * 25.9mJy
+rms = 25.9 mJy/beam
 
 [pvmap_north_arm]
 loc = 0 1
