--- a/configs/plots/papers/G336.01-0.82_moments_ch3oh.cfg
+++ b/configs/plots/papers/G336.01-0.82_moments_ch3oh.cfg
@@ -41,31 +41,35 @@ basedir = /data/share/binary_project/results/G336.01-0.82/c8/CH3OH
 
 [moment0]
 loc = 0 0
-image = ${basedir}/CH3OH_18_3_15_-17_4_14_A_vt_0.subcube.moment0.fits
+#image = ${basedir}/CH3OH_18_3_15_-17_4_14_A_vt_0.subcube.moment0.fits
+image = ${basedir}/CH3OH_18_3_15_-17_4_14_A_vt_0.subcube_CH3OHvt0-2_18_3_15_-17_4_14_A_vt_0_2xlinewidth_moment0.fits
 name = Intensity
 unit = km*mJy/beam/s
 label = moment 0
-stretch = log
+stretch = linear
 #compute_ticks = true
 center = 16h35m09.261s -48d46m47.66s icrs
 radius = 0.6 arcsec
 # Contours
 self_contours = false
-vmin = -1 km*mJy/beam/s
+vmin = 0 km*mJy/beam/s
 #vmin = 20 km*mJy/beam/s
-vmax = 210 km*mJy/beam/s
+#vmax = 210 km*mJy/beam/s
+vmax = 170 km*mJy/beam/s
 #vmax = 340 km*mJy/beam/s
 a = 10
 # Beam
 plot_beam = true
 beam_color = w
 # Regions
-regions = /data/share/binary_project/configs/pvmaps/regions/G336.01-0.82_north_stream_ch3oh.crtf, /data/share/binary_project/configs/pvmaps/regions/G336.01-0.82_south_stream_ch3oh.crtf
+regions = /data/share/binary_project/scripts/configs/pvmaps/regions/G336.01-0.82_north_stream_ch3oh.crtf, /data/share/binary_project/scripts/configs/pvmaps/regions/G336.01-0.82_south_stream_ch3oh.crtf
 regions_color = #0c99ff, #f70032
+regions_linewidth = 3
 # PV map arrow
 arrows = 16h35m09.26085s -48d46m47.65854s icrs
 arrows_pa = 125 deg
 arrows_color = #667298
+arrows_linewidth = 3
 
 [moment1]
 loc = 0 1
