Update posters figures

--- a/configs/plots/posters/G336.01-0.82_streamers.cfg
+++ b/configs/plots/posters/G336.01-0.82_streamers.cfg
@@ -27,18 +27,18 @@ ignore_units = false
 labelpad = 5
 # Artists
 #label = robust = 0.5
-scatters = 16h35m09.26085s -48d46m47.65854s icrs, 16h35m09.25148s -48d46m47.5705s icrs, 16h35m09.27024s -48d46m47.71483s icrs
-scatters_marker = ^
-scatters_mec = #1cef40
-#scatters_mec = #df11b3
-scatters_fillstyle = none
-scatters_ms = 7
+markers = 16h35m09.26085s -48d46m47.65854s icrs, 16h35m09.25148s -48d46m47.5705s icrs, 16h35m09.27024s -48d46m47.71483s icrs
+markers_marker = ^
+markers_mec = #1cef40
+#markers_mec = #df11b3
+markers_fillstyle = none
+markers_ms = 7
 scale = 16h35m09.205s -48d46m48.2s icrs
 scale_distance = 3.1 kpc
 scale_size = 500 au
 # Non-standard
 nconfig = config8
-basedir = /data/share/binary_project/results/G336.01-0.82/CH3OH
+basedir = /data/share/binary_project/results/G336.01-0.82/paper_2023/c8/CH3OH
 
 [moment1]
 loc = 0 0
@@ -46,7 +46,7 @@ image = ${basedir}/CH3OH_18_3_15_-17_4_14_A_vt_0.subcube.moment1.fits
 name = Velocity
 unit = km/s
 shift_data = 47.2 km/s
-label = moment 1
+label = CH$$_3$$OH moment 1
 stretch = linear
 with_style = vik
 compute_ticks = false
@@ -60,13 +60,14 @@ vmax = 6 km/s
 plot_beam = true
 beam_color = k
 # Streamers
-streamers = /data/share/binary_project/results/G336.01-0.82/concat/CH3OH/streamer_models/Mstar10/regions/stream_north_rmin600_r02500_rc600_theta080_phi055_vr00.ecsv, /data/share/binary_project/results/G336.01-0.82/concat/CH3OH/streamer_models/regions/stream_south_rmin600_r02500_rc600_theta080_phi0280_vr02.ecsv
+#streamers = /data/share/binary_project/results/G336.01-0.82/concat/CH3OH/streamer_models/Mstar10/regions/stream_north_rmin600_r02500_rc600_theta080_phi055_vr00.ecsv, /data/share/binary_project/results/G336.01-0.82/concat/CH3OH/streamer_models/regions/stream_south_rmin600_r02500_rc600_theta080_phi0280_vr02.ecsv
+streamers = /data/share/binary_project/results/G336.01-0.82/paper_2023/c8/CH3OH/streamer_models_incl65_cb200/regions/stream_north_rmin400_r02500_rc400_theta080_phi060_vr00.ecsv, /data/share/binary_project/results/G336.01-0.82/paper_2023/c8/CH3OH/streamer_models_incl65_cb200/regions/stream_south_rmin400_r02500_rc400_theta080_phi0280_vr02.ecsv
 #regions_color = #0c99ff, #f70032
 #regions_linewidth = 4
 
 [continuum]
 loc = 0 0
-basedir = /data/share/binary_project/G336.01/G336.01-0.82/final_data/${nconfig}
+basedir = /data/share/binary_project/source_data/G336.01-0.82/final_data/${nconfig}
 contour = ${basedir}/G336.01-0.82.config8.cont_avg.selfcal_0.5_hogbom.image.fits
 #contour_colors = #333333
 contour_colors = #7f7f7f
