--- a/configs/plots/posters/G336.01-0.82_pv_maps_ch3oh.cfg
+++ b/configs/plots/posters/G336.01-0.82_pv_maps_ch3oh.cfg
@@ -1,5 +1,5 @@
 [DEFAULT]
-ncols = 2
+ncols = 1
 nrows = 1
 sharex = false
 sharey = true
@@ -28,69 +28,75 @@ yticks_fmt = {x:.0f}
 inverty = true
 hlines = -47.2 km/s
 hlines_linestyle = --
-hlines_color = #ff00ff
+hlines_color = #35ff2c
 ticks_color = w
 enumerate = false
 labelpad = 5
 # Non-standard
 nconfig = config8
-basedir = /data/share/binary_project/results/G336.01-0.82/pvmaps
+basedir = /data/share/binary_project/results/G336.01-0.82/paper_2023/c8/pvmaps
 
 [pvmap_rotation]
 loc = 0 0
 pvmap = ${basedir}/G336.01-0.82_rotation.CH3OH_spw0.ra248.78859_dec-48.77991.PA125.fits
 label = Across sources $$({\rm PA}=125{^\circ})$$
-rms = 0.82 mJy/beam
+rms = 1.2 mJy/beam
 vmin = 0. mJy/beam
 vmax = 30 mJy/beam
 # Contours
 self_contours = true
 contour_colors = #7f7f7f
+contour_linewidth = 1
 negative_nsigma = 3
 # Units
 set_xlabel = true
 unit = mJy/beam
 texts =  -0.4 arcsec -60 km/s, -0.4 arcsec -63 km/s
-texts_text = Rotation+infall model (FERIA[2]), M=10 M$$_\odot$$   R$$_{\rm cb}$$=300 au
+texts_text = Rotation+infall model (FERIA[2]), M=10 M$$_\odot$$   R$$_{\rm cb}$$=200 au
 texts_physframe = data
 texts_color = #0c99ff
 texts_backgroundcolor = #06041b
+# Artists
+vlines = -0.13 arcsec, 0.11 arcsec
+vlines_linestyle = :
+vlines_color = #35ff2c
 
 [pvmap_model]
 loc = 0 0
-pvmap_contour = /home/users/folguin/clones/feria/images/dens_1e-2/G336-Vsys-47.2_LineCH3OH_Pix0.004as0.1kmps_D3100M10CB300I65.PA125Rot1Rout1000.Rin300_IRE-T1Flare30Nprof-1.5Tprof-0.4_Kep-T0.5Flare30Nprof-1.5Tprof-0.4_LW1.0_Beam0.0692x0.0517PA-29.07_PV-PA125deg-CentRA0.Dec0..fits
+#pvmap_contour = /home/users/folguin/clones/feria/images/dens_1e-2/G336-Vsys-47.2_LineCH3OH_Pix0.004as0.1kmps_D3100M10CB300I65.PA125Rot1Rout1000.Rin300_IRE-T1Flare30Nprof-1.5Tprof-0.4_Kep-T0.5Flare30Nprof-1.5Tprof-0.4_LW1.0_Beam0.0692x0.0517PA-29.07_PV-PA125deg-CentRA0.Dec0..fits
+pvmap_contour = /home/users/folguin/clones/feria_G336/large_grid_pa125_rout800/G336-Vsys-47.2_LineCH3OH_Pix0.004as0.1kmps_D3100M10CB200.I65.PA125Rot1Rout800.Rin200._IRE-T0.Flare30Nprof-1.5Tprof-0.4_Kep-T0.5Flare30Nprof-1.5Tprof-0.4_LW1.0_Beam0.0692x0.0517PA-29.07_PV-PA125deg-CentRA0.Dec0..fits
 contour_colors = #0c99ff
 contour_linewidth = 1
 unit = mJy/beam
-rms = 0.82 mJy/beam
+rms = 25.9 mJy/beam
 
-[pvmap_north_arm]
-loc = 0 1
-pvmap = ${basedir}/G336.01-0.82_north_stream_ch3oh_CH3OH_spw0.fits
-label = Along north spiral
-rms = 1.2 mJy/beam
-vmin = 0. mJy/beam
-vmax = 25 mJy/beam
-# Contours
-self_contours = true
-contour_colors = #7f7f7f
-negative_nsigma = 3
-# Units
-set_xlabel = false
-set_ylabel = false
-ignore_units = false
-unit = mJy/beam
-# Fit line
-axlines = 0. arcsec -50.569869277902846 km/s
-axlines_slope =  6.490802162182033 km/arcsec/s
-axlines_physframe = data
-axlines_color = #0c99ff
-# Annotate the fit results
-texts =  0.1 arcsec -62 km/s
-texts_text = Slope 6.5 km s$$^{-1}$$ arcsec$$^{-1}$$ 
-texts_physframe = data
-texts_color = #0c99ff
-texts_backgroundcolor = #06041b
+#[pvmap_north_arm]
+#loc = 0 1
+#pvmap = ${basedir}/G336.01-0.82_north_stream_ch3oh_CH3OH_spw0.fits
+#label = Along north spiral
+#rms = 1.2 mJy/beam
+#vmin = 0. mJy/beam
+#vmax = 25 mJy/beam
+## Contours
+#self_contours = true
+#contour_colors = #7f7f7f
+#negative_nsigma = 3
+## Units
+#set_xlabel = false
+#set_ylabel = false
+#ignore_units = false
+#unit = mJy/beam
+## Fit line
+#axlines = 0. arcsec -50.569869277902846 km/s
+#axlines_slope =  6.490802162182033 km/arcsec/s
+#axlines_physframe = data
+#axlines_color = #0c99ff
+## Annotate the fit results
+#texts =  0.1 arcsec -62 km/s
+#texts_text = Slope 6.5 km s$$^{-1}$$ arcsec$$^{-1}$$ 
+#texts_physframe = data
+#texts_color = #0c99ff
+#texts_backgroundcolor = #06041b
 
 #[pvmap_south_arm]
 #loc = 0 2
