Add new cubes to configs

--- a/configs/G333.23-0.06.cfg
+++ b/configs/G333.23-0.06.cfg
@@ -3,9 +3,9 @@ name = G333.23-0.06
 ra = 16h19m51.1737s
 dec = -50d15m11.7494s
 frame = icrs
-basedir = /home/myso/share/binary_project/G333_G335/G333.23-0.06
+basedir = /data/share/binary_project/source_data/G333.23-0.06
 distance = 3.7 kpc
-vlsr = -87.2 km/s
+vlsr = -87.04 km/s
 
 [ALMA1]
 name = ALMA1
@@ -199,3 +199,54 @@ ra = 16h19m50.9873s
 dec = -50d15m07.6s
 frame = icrs
 
+[b6_c8_continuum]
+type = fits_file
+file = ${basedir}/final_data/config8/G333.23-0.06.config8.cont_avg.selfcal_0.5_hogbom.image.fits
+
+[b6_c8_spw0_1]
+type = spectral_cube
+file = ${basedir}/yclean_config8/G333.23-0.06_spw0_1/autoG333.23-0.06_spw0_1.tc_final.image.fits
+rms = 2.1 mJy/beam
+molecules = CH3OH (13)CH3OH SO2
+
+[b6_c8_spw0_2]
+type = spectral_cube
+file = ${basedir}/yclean_config8/G333.23-0.06_spw0_2/autoG333.23-0.06_spw0_2.tc_final.image.fits
+rms = 2.1 mJy/beam
+molecules = CH3OH (13)CH3OH SO2
+
+[b6_c8_spw1_1]
+type = spectral_cube
+file = ${basedir}/yclean_config8/G333.23-0.06_spw1_1/autoG333.23-0.06_spw1_1.tc_final.image.fits
+rms = 1.57 mJy/beam
+molecules = CH3OH (13)CH3OH CH3CHO HNCO NH2CHO (13)CH3CN
+
+[b6_c8_spw1_2]
+type = spectral_cube
+file = ${basedir}/yclean_config8/G333.23-0.06_spw1_2/autoG333.23-0.06_spw1_2.tc_final.image.fits
+rms = 1.57 mJy/beam
+molecules = CH3OH (13)CH3OH CH3CHO HNCO NH2CHO (13)CH3CN
+
+[b6_c8_spw2_1]
+type = spectral_cube
+file = ${basedir}/yclean_config8/G333.23-0.06_spw2_1/autoG333.23-0.06_spw2_1.tc_final.image.fits
+rms = 1.82 mJy/beam
+molecules = CH3OH SiO
+
+[b6_c8_spw2_2]
+type = spectral_cube
+file = ${basedir}/yclean_config8/G333.23-0.06_spw2_2/autoG333.23-0.06_spw2_2.tc_final.image.fits
+rms = 1.82 mJy/beam
+molecules = CH3OH SiO
+
+[b6_c8_spw3_1]
+type = spectral_cube
+file = ${basedir}/yclean_config8/G333.23-0.06_spw3_1/autoG333.23-0.06_spw3_1.tc_final.image.fits
+rms = 2.0 mJy/beam
+molecules = CH3CN HC3N
+
+[b6_c8_spw3_2]
+type = spectral_cube
+file = ${basedir}/yclean_config8/G333.23-0.06_spw3_2/autoG333.23-0.06_spw3_2.tc_final.image.fits
+rms = 2.0 mJy/beam
+molecules = CH3CN HC3N
