--- a/configs/G336.01-0.82.cfg
+++ b/configs/G336.01-0.82.cfg
@@ -5,7 +5,7 @@ name = G336.01-0.82
 ra = 16h35m09.261s
 dec = -48d46m47.66s
 frame = icrs
-basedir = /data/share/binary_project/G336.01/G336.01-0.82
+basedir = /data/share/binary_project/source_data/G336.01-0.82
 distance = 3.1 kpc
 vlsr = -47.2 km/s
 
