--- a/configs/G35.20-0.74_N.cfg
+++ b/configs/G35.20-0.74_N.cfg
@@ -3,9 +3,10 @@ name = G35.20-0.74_N
 ra = 18h58m12.9531s
 dec = +1d40m37.3686s
 frame = icrs
-basedir = /data/share/binary_project/G34.43/G35.20-0.74_N
+basedir = /data/share/binary_project/source_data/G35.20-0.74_N
 distance = 2.2 kpc
-vlsr = 30.0 km/s
+#vlsr = 30.0 km/s
+vlsr = 35.9 km/s
 
 [ALMA1]
 name = ALMA1
@@ -207,3 +208,36 @@ ra = 18h58m12.9059s
 dec = +01d40m34.98s
 frame = icrs
 
+[b6_c8_continuum]
+type = fits_file
+file = ${basedir}/pbclean/G35.20-0.74_N.config8.selfcal.cont_avg.robust0.5.image.fits
+
+[b6_c8_spw0]
+type = spectral_cube
+file = ${basedir}/yclean_config8/G35.20-0.74_N_spw0/autoG35.20-0.74_N_spw0.tc_final.image.fits
+rms = 1.8 mJy/beam
+molecules = CH3OH (13)CH3OH SO2
+
+[b6_c8_spw1]
+type = spectral_cube
+file = ${basedir}/yclean_config8/G35.20-0.74_N_spw1/autoG35.20-0.74_N_spw1.tc_final.image.fits
+rms = 1.7 mJy/beam
+molecules = CH3OH (13)CH3OH CH3CHO HNCO NH2CHO (13)CH3CN
+
+[b6_c8_spw2]
+type = spectral_cube
+file = ${basedir}/yclean_config8/G35.20-0.74_N_spw2/autoG35.20-0.74_N_spw0.tc_final.image.fits
+rms = 2.7 mJy/beam
+molecules = CH3OH SiO
+
+[b6_c8_spw3_1]
+type = spectral_cube
+file = ${basedir}/yclean_config8/G35.20-0.74_N_spw3/G35.20-0.74_N_spw0_1/autoG35.20-0.74_N_spw0_1.tc_final.image.fits
+rms = 1.9 mJy/beam
+molecules = C(18)O
+
+[b6_c8_spw3_2]
+type = spectral_cube
+file = ${basedir}/yclean_config8/G35.20-0.74_N_spw3/G35.20-0.74_N_spw0_2/autoG35.20-0.74_N_spw0.tc_final.image.fits
+rms = 1.9 mJy/beam
+molecules = CH3CN HC3N
