--- a/configs/IRAS_180891732.cfg
+++ b/configs/IRAS_180891732.cfg
@@ -3,7 +3,7 @@ name = IRAS_180891732
 ra = 18h11m51.4549s
 dec = -17d31m28.8108s
 frame = icrs
-basedir = /home/myso/share/binary_project/IRAS_18089/IRAS_180891732
+basedir = /data/share/binary_project/source_data/IRAS_180891732
 distance = 3.6 kpc
 vlsr = 32.9 km/s
 
@@ -113,24 +113,84 @@ frame = icrs
 
 [b6_c8_continuum]
 type = fits_file
-file = ${basedir}/pbclean/IRAS_180891732.config8.selfcal.cont_avg.robust0.5.image.fits
+file = ${basedir}/final_data/config8/IRAS_180891732.config8.cont_avg.selfcal_0.5_hogbom.image.fits
 
-[b6_c8_spw1_640_1420]
-type = spectral_cube
-file = ${basedir}/yclean_config8/IRAS_180891732_spw1_640_1420/autoIRAS_180891732_spw1.tc_final.image.fits
-molecules = (13)CH3CN CH3OH CH3CHO HNCO
+#[b6_c8_spw1_640_1420]
+#type = spectral_cube
+#file = ${basedir}/yclean_config8/IRAS_180891732_spw1_640_1420/autoIRAS_180891732_spw1.tc_final.image.fits
+#molecules = (13)CH3CN CH3OH CH3CHO HNCO
+#
+#[b6_c8_spw2_0_781]
+#type = spectral_cube
+#file = ${basedir}/yclean_config8/IRAS_180891732_spw2_0_781/autoIRAS_180891732_spw2.tc_final.image.fits
+#molecules = SiO CH3OH CH3OCHO SO2 (13)CH3OH
+#
+#[b6_c8_spw3_2500_3500]
+#type = spectral_cube
+#file = ${basedir}/yclean_config8/IRAS_180891732_spw3_2500_3500/autoIRAS_180891732_spw3.tc_final.image.fits
+#molecules = CH3CN CH2CHCN (13)CO
+#
+#[b6_c8_spw3_920_1700]
+#type = spectral_cube
+#file = ${basedir}/yclean_config8/IRAS_180891732_spw3_920_1700/autoIRAS_180891732_spw3.tc_final.image.fits
+#molecules = HNCO HC3N
 
-[b6_c8_spw2_0_781]
+[b6_c8_spw0]
 type = spectral_cube
-file = ${basedir}/yclean_config8/IRAS_180891732_spw2_0_781/autoIRAS_180891732_spw2.tc_final.image.fits
-molecules = SiO CH3OH CH3OCHO SO2 (13)CH3OH
+file = ${basedir}/yclean_config8/IRAS_180891732_spw0/autoIRAS_180891732_spw0.tc_final.image.fits
+rms = 1.7 mJy/beam
+molecules = CH3OH (13)CH3OH SO2
 
-[b6_c8_spw3_2500_3500]
+[b6_c8_spw1]
 type = spectral_cube
-file = ${basedir}/yclean_config8/IRAS_180891732_spw3_2500_3500/autoIRAS_180891732_spw3.tc_final.image.fits
-molecules = CH3CN CH2CHCN (13)CO
+file = ${basedir}/yclean_config8/IRAS_180891732_spw1/autoIRAS_180891732_spw1.tc_final.image.fits
+rms = 1.5 mJy/beam
+molecules = CH3OH (13)CH3OH CH3CHO HNCO NH2CHO (13)CH3CN
 
-[b6_c8_spw3_920_1700]
+[b6_c8_spw2]
 type = spectral_cube
-file = ${basedir}/yclean_config8/IRAS_180891732_spw3_920_1700/autoIRAS_180891732_spw3.tc_final.image.fits
-molecules = HNCO HC3N
+file = ${basedir}/yclean_config8/IRAS_180891732_spw2/autoIRAS_180891732_spw2.tc_final.image.fits
+rms = 1.6 mJy/beam
+molecules = CH3OH SiO
+
+[b6_c8_spw3_1]
+type = spectral_cube
+file = ${basedir}/yclean_config8/IRAS_180891732_spw3/IRAS_180891732_spw0_1/autoIRAS_180891732_spw0_1.tc_final.image.fits
+rms = 1.7 mJy/beam
+molecules = C(18)O
+
+[b6_c8_spw3_2]
+type = spectral_cube
+file = ${basedir}/yclean_config8/IRAS_180891732_spw3/IRAS_180891732_spw0_2/autoIRAS_180891732_spw0_2.tc_final.image.fits
+rms = 1.7 mJy/beam
+molecules = CH3CN HC3N
+
+[b6_c5c8_spw0]
+type = spectral_cube
+file = ${basedir}/yclean_concat/IRAS_180891732_spw0/autoIRAS_180891732_spw0.tc_final.image.fits
+rms = 1.4 mJy/beam
+molecules = CH3OH (13)CH3OH SO2
+
+[b6_c5c8_spw1]
+type = spectral_cube
+file = ${basedir}/yclean_concat/IRAS_180891732_spw1/autoIRAS_180891732_spw0.tc_final.image.fits
+rms = 1.4 mJy/beam
+molecules = CH3OH (13)CH3OH CH3CHO HNCO NH2CHO (13)CH3CN
+
+[b6_c5c8_spw2]
+type = spectral_cube
+file = ${basedir}/yclean_concat/IRAS_180891732_spw2/autoIRAS_180891732_spw0.tc_final.image.fits
+rms = 1.2 mJy/beam
+molecules = CH3OH SiO
+
+[b6_c5c8_spw3_1]
+type = spectral_cube
+file = ${basedir}/yclean_concat/IRAS_180891732_spw3_1/autoIRAS_180891732_spw0_1.tc_final.image.fits
+#rms = 1.7 mJy/beam
+molecules = C(18)O
+
+[b6_c5c8_spw3_2]
+type = spectral_cube
+file = ${basedir}/yclean_concat/IRAS_180891732_spw3_2/autoIRAS_180891732_spw0_2.tc_final.image.fits
+#rms = 1.7 mJy/beam
+molecules = CH3CN HC3N
