--- a/configs/G34.43+0.24.cfg
+++ b/configs/G34.43+0.24.cfg
@@ -3,9 +3,9 @@ name = G34.43+0.24
 ra = 18h53m18.0158s
 dec = +1d25m25.4883s
 frame = icrs
-basedir = /data/share/binary_project/G34.43/G34.43+0.24
+basedir = /data/share/binary_project/source_data/G34.43+0.24
 distance = 1.6 kpc
-vlsr = 57.6 km/s
+vlsr = 58.4 km/s
 
 [ALMA1]
 name = ALMA1
@@ -103,3 +103,36 @@ ra = 18h53m18.066s
 dec = +01d25m22.32s
 frame = icrs
 
+[b6_c8_continuum]
+type = fits_file
+file = ${basedir}/pbclean/G34.43+0.24.config8.selfcal.cont_avg.robust0.5.image.fits
+
+[b6_c8_spw0]
+type = spectral_cube
+file = ${basedir}/yclean_config8/G34.43+0.24_spw0/autoG34.43+0.24_spw0.tc_final.image.fits
+#rms = 1.3 mJy/beam
+molecules = CH3OH (13)CH3OH SO2
+
+[b6_c8_spw1]
+type = spectral_cube
+file = ${basedir}/yclean_config8/G34.43+0.24_spw1/autoG34.43+0.24_spw1.tc_final.image.fits
+#rms = 1.28 mJy/beam
+molecules = CH3OH (13)CH3OH CH3CHO HNCO NH2CHO (13)CH3CN
+
+[b6_c8_spw2]
+type = spectral_cube
+file = ${basedir}/yclean_config8/G34.43+0.24_spw2/autoG34.43+0.24_spw0.tc_final.image.fits
+#rms = 2.7 mJy/beam
+molecules = CH3OH SiO
+
+[b6_c8_spw3_1]
+type = spectral_cube
+file = ${basedir}/yclean_config8/G34.43+0.24_spw3_1/autoG34.43+0.24_spw0_1.tc_final.image.fits
+#rms = 1.48 mJy/beam
+molecules = C(18)O
+
+[b6_c8_spw3_2]
+type = spectral_cube
+file = ${basedir}/yclean_config8/G34.43+0.24_spw3_2/autoG34.43+0.24_spw0_2.tc_final.image.fits
+#rms = 1.48 mJy/beam
+molecules = CH3CN HC3N
