--- a/configs/G35.03+0.35_A.cfg
+++ b/configs/G35.03+0.35_A.cfg
@@ -3,9 +3,10 @@ name = G35.03+0.35_A
 ra = 18h54m00.6512s
 dec = +2d01m19.3389s
 frame = icrs
-basedir = /data/share/binary_project/G34.43/G35.03+0.35_A
+basedir = /data/share/binary_project/source_data/G35.03+0.35_A
 distance = 3.2 kpc
-vlsr = 48.0 km/s
+#vlsr = 48.0 km/s
+vlsr = 45.94 km/s
 
 [ALMA1]
 name = ALMA1
@@ -127,3 +128,36 @@ ra = 18h54m00.8541s
 dec = +02d01m18.82s
 frame = icrs
 
+[b6_c8_continuum]
+type = fits_file
+file = ${basedir}/pbclean/G35.03+0.35_A.config8.selfcal.cont_avg.robust0.5.image.fits
+
+[b6_c8_spw0]
+type = spectral_cube
+file = ${basedir}/yclean_config8/G35.03+0.35_A_spw0/autoG35.03+0.35_A_spw0.tc_final.image.fits
+#rms = 1.3 mJy/beam
+molecules = CH3OH (13)CH3OH SO2
+
+[b6_c8_spw1]
+type = spectral_cube
+file = ${basedir}/yclean_config8/G35.03+0.35_A_spw1/autoG35.03+0.35_A_spw1.tc_final.image.fits
+#rms = 1.28 mJy/beam
+molecules = CH3OH (13)CH3OH CH3CHO HNCO NH2CHO (13)CH3CN
+
+[b6_c8_spw2]
+type = spectral_cube
+file = ${basedir}/yclean_config8/G35.03+0.35_A_spw2/autoG35.03+0.35_A_spw0.tc_final.image.fits
+#rms = 2.7 mJy/beam
+molecules = CH3OH SiO
+
+[b6_c8_spw3_1]
+type = spectral_cube
+file = ${basedir}/yclean_config8/G35.03+0.35_A_spw3/G35.03+0.35_A_spw0_1/autoG35.03+0.35_A_spw0_1.tc_final.image.fits
+#rms = 1.48 mJy/beam
+molecules = C(18)O
+
+[b6_c8_spw3_2]
+type = spectral_cube
+file = ${basedir}/yclean_config8/G35.03+0.35_A_spw3/G35.03+0.35_A_spw0_2/autoG35.03+0.35_A_spw0_2.tc_final.image.fits
+#rms = 1.48 mJy/beam
+molecules = CH3CN HC3N
