--- a/configs/W33A.cfg
+++ b/configs/W33A.cfg
@@ -3,9 +3,9 @@ name = W33A
 ra = 18h14m39.5097s
 dec = -17d52m00.139s
 frame = icrs
-basedir = /home/myso/share/binary_project/IRAS_18089/W33A
+basedir = /data/share/binary_project/source_data/W33A
 distance = 3.8 kpc
-vlsr = 38.5 km/s
+vlsr = 37.9 km/s
 
 [ALMA1]
 name = ALMA1
@@ -175,3 +175,36 @@ ra = 18h14m39.1601s
 dec = -17d52m06.46s
 frame = icrs
 
+[b6_c8_continuum]
+type = fits_file
+file = ${basedir}/final_data/config8/W33A.config8.cont_avg.selfcal_0.5_hogbom.image.fits
+
+[b6_c8_spw0]
+type = spectral_cube
+file = ${basedir}/yclean_config8/W33A_spw0/autoW33A_spw0.tc_final.image.fits
+rms = 1.3 mJy/beam
+molecules = CH3OH (13)CH3OH SO2
+
+[b6_c8_spw1]
+type = spectral_cube
+file = ${basedir}/yclean_config8/W33A_spw1/autoW33A_spw1.tc_final.image.fits
+rms = 1.28 mJy/beam
+molecules = CH3OH (13)CH3OH CH3CHO HNCO NH2CHO (13)CH3CN
+
+[b6_c8_spw2]
+type = spectral_cube
+file = ${basedir}/yclean_config8/W33A_spw2/autoW33A_spw0.tc_final.image.fits
+rms = 2.7 mJy/beam
+molecules = CH3OH SiO
+
+[b6_c8_spw3_1]
+type = spectral_cube
+file = ${basedir}/yclean_config8/W33A_spw3/W33A_spw0_1/autoW33A_spw0_1.tc_final.image.fits
+rms = 1.48 mJy/beam
+molecules = C(18)O
+
+[b6_c8_spw3_2]
+type = spectral_cube
+file = ${basedir}/yclean_config8/W33A_spw3/W33A_spw0_2/autoW33A_spw0_2.tc_final.image.fits
+rms = 1.48 mJy/beam
+molecules = CH3CN HC3N
