Reorganize reduction configs

--- a/reduction/goco_configs/G333.12-0.56_config8.cfg
+++ b/reduction/goco_configs/G333.12-0.56_config8.cfg
@@ -52,7 +52,8 @@ vlsr = 0.0
 #dir = ~/Python/yclean
 #restfreqs = 234.525GHz 232.025GHz 217.824GHz 220.024GHz
 #restfreqs = 220.024GHz
-spws = 0,1,2,3
-chanranges = 0~1930 1910~3839
+spws = 0
+#chanranges = 0~1930 1910~3839
+chanranges = 1910~3839
 #joinchans = 0~1920 11~1929
 
