--- a/reduction/goco_configs/G34.43+0.24MM2_config8.cfg
+++ b/reduction/goco_configs/G34.43+0.24MM2_config8.cfg
@@ -44,17 +44,17 @@ pbcor = true
 #scales = 0,5,15
 deconvolver = hogbom
 robust = 0.5
-cell = 0.01arcsec
-imsize = 3800
+imsize = 3300
+cell = 0.013arcsec
 vlsr = 0.0
 # km/s
 #out_prefix = G34.43+0.24MM2.config8.selfcal
 #dir = ~/Python/yclean
 #restfreqs = 234.525GHz 232.025GHz 217.824GHz 220.024GHz
 # SPW0,1,2
-spws = 0
+#spws = 0,1,2
 # SPW3
-#spws = 0
-#chanranges = 0~1930 1910~3839
+spws = 0
+chanranges = 0~1930 1910~3839
 #joinchans = 0~1920 11~1929
 
