--- a/reduction/goco_configs/G35.20-0.74_N_config8.cfg
+++ b/reduction/goco_configs/G35.20-0.74_N_config8.cfg
@@ -47,6 +47,7 @@ robust = 0.5
 cell = 0.013arcsec
 imsize = 2940
 vlsr = 0.0
+phasecenter = ICRS 18h58m13.0285s +01d40m35.978s
 # km/s
 out_prefix = G35.20-0.74_N.config8.selfcal
 dir = ~/Python/yclean
@@ -56,5 +57,8 @@ dir = ~/Python/yclean
 # For spw2
 #spws = 0
 # For spw3
+#spws = 0
+#chanranges = 0~1930 1910~3865
+# Concat
+gridder = mosaic
 spws = 0
-chanranges = 0~1930 1910~3865
