--- a/reduction/goco_configs/IRAS_18337-0743_config8.cfg
+++ b/reduction/goco_configs/IRAS_18337-0743_config8.cfg
@@ -40,14 +40,16 @@ parallel = true
 pbcor = true
 
 [yclean]
-deconvolver = multiscale
-scales = 0,5,15
+#deconvolver = multiscale
+#scales = 0,5,15
+deconvolver = hogbom
+robust = 0.5
+imsize = 5120
+cell = 0.01arcsec
 vlsr = 0.0
 # km/s
-out_prefix = IRAS_18337-0743.config8.selfcal
-dir = ~/Python/yclean
-restfreqs = 234.525GHz 232.025GHz 217.824GHz 220.024GHz
-#restfreqs = 220.024GHz
+#restfreqs = 234.525GHz 232.025GHz 217.824GHz 220.024GHz
+spws = 0,1,2,3
 chanranges = 0~1930 1910~3839
-joinchans = 0~1920 11~1929
+#joinchans = 0~1920 11~1929
 
