--- a/reduction/goco_configs/G35.13-0.74_config8.cfg
+++ b/reduction/goco_configs/G35.13-0.74_config8.cfg
@@ -40,14 +40,21 @@ parallel = true
 pbcor = true
 
 [yclean]
-deconvolver = multiscale
-scales = 0,5,15
+#deconvolver = multiscale
+#scales = 0,5,15
+deconvolver = hogbom
+robust = 0.5
+imsize = 3300
+cell = 0.013arcsec
 vlsr = 0.0
 # km/s
-out_prefix = G35.13-0.74.config8.selfcal
-dir = ~/Python/yclean
-restfreqs = 234.525GHz 232.025GHz 217.824GHz 220.024GHz
-#restfreqs = 220.024GHz
+#out_prefix = G35.13-0.74.config8.selfcal
+#dir = ~/Python/yclean
+#restfreqs = 234.525GHz 232.025GHz 217.824GHz 220.024GHz
+# SPW0,1,2
+#spws = 0,1,2
+# SPW3
+spws = 0
 chanranges = 0~1930 1910~3839
-joinchans = 0~1920 11~1929
+#joinchans = 0~1920 11~1929
 
