--- a/reduction/goco_configs/G29.96-0.02_config8.cfg
+++ b/reduction/goco_configs/G29.96-0.02_config8.cfg
@@ -40,12 +40,14 @@ parallel = true
 pbcor = true
 
 [yclean]
-deconvolver = multiscale
-scales = 0,5,15
+#deconvolver = multiscale
+#scales = 0,5,15
+deconvolver = hogbom
+robust = 0.5
+imsize = 4096
+cell = 0.013arcsec
 vlsr = 0.0
 # km/s
-out_prefix = G29.96-0.02.config8.selfcal
-dir = ~/Python/yclean
 restfreqs = 234.525GHz 232.025GHz 217.824GHz 220.024GHz
 #restfreqs = 220.024GHz
 chanranges = 0~1930 1910~3839
