Add c5c8 cubes to pipeline

--- a/configs/G24.60+0.08.cfg
+++ b/configs/G24.60+0.08.cfg
@@ -4,6 +4,7 @@ ra = 18h35m40.1872s
 dec = -7d18m37.1902s
 frame = icrs
 basedir = /data/share/binary_project/G24.6/G24.60+0.08
+cubesdir = /Volumes/Pegasus32 R8/dihca/source_data/clean_cubes/
 distance = 3.6 kpc
 vlsr = 53.4 km/s
 
@@ -86,4 +87,10 @@ radius = 0.19738573927442574 arcsec
 ra = 18h35m41.1799s
 dec = -07d18m30.481s
 frame = icrs
+
+[b6_c5c8_spw0_1000]
+type = spectral_cube
+file = ${cubesdir}/c5c8_CH3OH/G24.60+0.08_spw0_0-1000.image.fits
+#rms = 2.4 mJy/beam
+molecules = CH3OH
 
