--- a/configs/G29.96-0.02.cfg
+++ b/configs/G29.96-0.02.cfg
@@ -4,6 +4,7 @@ ra = 18h46m03.7779s
 dec = -2d39m22.38s
 frame = icrs
 basedir = /data/share/binary_project/G34.43/G29.96-0.02
+cubesdir = /Volumes/Pegasus32 R8/dihca/source_data/clean_cubes/
 distance = 3.5 kpc
 vlsr = 98.0 km/s
 
@@ -142,4 +143,10 @@ radius = 0.22708192698185986 arcsec
 ra = 18h46m03.8481s
 dec = -02d39m20.74s
 frame = icrs
+
+[b6_c5c8_spw0_1000]
+type = spectral_cube
+file = ${cubesdir}/c5c8_CH3OH/G29.96-0.02_spw0_0-1000.image.fits
+rms = 1.7 mJy/beam
+molecules = CH3OH
 
