--- a/configs/G333.12-0.56.cfg
+++ b/configs/G333.12-0.56.cfg
@@ -4,6 +4,7 @@ ra = 16h21m35.3742s
 dec = -50d40m56.5841s
 frame = icrs
 basedir = /data/share/binary_project/G336.01/G333.12-0.56
+cubesdir = /Volumes/Pegasus32 R8/dihca/source_data/clean_cubes/
 distance = 2.4 kpc
 vlsr = -56.4 km/s
 
@@ -230,4 +231,10 @@ radius = 0.22454461911061827 arcsec
 ra = 16h21m35.9655s
 dec = -50d40m48.394s
 frame = icrs
+
+[b6_c5c8_spw0_1000]
+type = spectral_cube
+file = ${cubesdir}/c5c8_CH3OH/G333.12-0.56_spw0_0-1000.image.fits
+rms = 2.2 mJy/beam
+molecules = CH3OH
 
