--- a/configs/G333.23-0.06.cfg
+++ b/configs/G333.23-0.06.cfg
@@ -4,6 +4,7 @@ ra = 16h19m51.1737s
 dec = -50d15m11.7494s
 frame = icrs
 basedir = /data/share/binary_project/source_data/G333.23-0.06
+cubesdir = /Volumes/Pegasus32 R8/dihca/source_data/clean_cubes/
 distance = 3.7 kpc
 vlsr = -87.04 km/s
 
@@ -250,3 +251,10 @@ type = spectral_cube
 file = ${basedir}/yclean_config8/G333.23-0.06_spw3_2/autoG333.23-0.06_spw3_2.tc_final.image.fits
 rms = 2.0 mJy/beam
 molecules = CH3CN HC3N
+
+[b6_c5c8_spw0_1000]
+type = spectral_cube
+file = ${cubesdir}/c5c8_CH3OH/G333.23-0.06_spw0_0-1000.image.fits
+rms = 1.7 mJy/beam
+molecules = CH3OH
+
