--- a/configs/G336.01-0.82.cfg
+++ b/configs/G336.01-0.82.cfg
@@ -6,6 +6,7 @@ ra = 16h35m09.261s
 dec = -48d46m47.66s
 frame = icrs
 basedir = /data/share/binary_project/source_data/G336.01-0.82
+cubesdir = /Volumes/Pegasus32 R8/dihca/source_data/clean_cubes/
 distance = 3.1 kpc
 vlsr = -47.2 km/s
 
@@ -312,4 +313,10 @@ type = spectral_cube
 file = ${basedir}/yclean_concat/G336.01-0.82_spw3_2940_3570/autoG336.01-0.82_spw0.tc_final.image.fits
 rms = 2.3 mJy/beam
 molecules = CH3CN
+
+[b6_c5c8_spw0_1000]
+type = spectral_cube
+file = ${cubesdir}/c5c8_CH3OH/G336.01-0.82_spw0_0-1000.image.fits
+rms = 2.2 mJy/beam
+molecules = CH3OH
 
