--- a/configs/G351.77-0.54.cfg
+++ b/configs/G351.77-0.54.cfg
@@ -4,6 +4,7 @@ ra = 17h26m42.5335s
 dec = -36d09m17.3875s
 frame = icrs
 basedir = /data/share/binary_project/G343_G351/G351.77-0.54
+cubesdir = /Volumes/Pegasus32 R8/dihca/source_data/clean_cubes/
 distance = 2.2 kpc
 vlsr = -3.6 km/s
 
@@ -190,4 +191,10 @@ radius = 0.19446134443289614 arcsec
 ra = 17h26m42.4031s
 dec = -36d09m14.398s
 frame = icrs
+
+[b6_c5c8_spw0_1000]
+type = spectral_cube
+file = ${cubesdir}/c5c8_CH3OH/G351.77-0.54_spw0_0-1000.image.fits
+rms = 2.1 mJy/beam
+molecules = CH3OH
 
