--- a/configs/G5.89-0.37.cfg
+++ b/configs/G5.89-0.37.cfg
@@ -4,6 +4,7 @@ ra = 18h00m30.4581s
 dec = -24d04m00.9891s
 frame = icrs
 basedir = /home/myso/share/binary_project/IRAS_18089/G5.89-0.37
+cubesdir = /Volumes/Pegasus32 R8/dihca/source_data/clean_cubes/
 distance = 3.0 kpc
 vlsr = 10.0 km/s
 
@@ -182,4 +183,10 @@ radius = 0.19802974013474633 arcsec
 ra = 18h00m30.1858s
 dec = -24d04m07.759s
 frame = icrs
+
+[b6_c5c8_spw0_1000]
+type = spectral_cube
+file = ${cubesdir}/c5c8_CH3OH/G5.89-0.37_spw0_0-1000.image.fits
+rms = 1.5 mJy/beam
+molecules = CH3OH
 
