--- a/configs/IRAS_165623959.cfg
+++ b/configs/IRAS_165623959.cfg
@@ -4,6 +4,7 @@ ra = 16h59m41.6259s
 dec = -40d03m43.6356s
 frame = icrs
 basedir = /data/share/binary_project/NGC_6334/IRAS_165623959
+cubesdir = /Volumes/Pegasus32 R8/dihca/source_data/clean_cubes/
 distance = 1.7 kpc
 vlsr = -14.0 km/s
 
@@ -206,4 +207,10 @@ radius = 0.12437789380968077 arcsec
 ra = 16h59m41.9099s
 dec = -40d03m42.311s
 frame = icrs
+
+[b6_c5c8_spw0_1000]
+type = spectral_cube
+file = ${cubesdir}/c5c8_CH3OH/IRAS_165623959_spw0_0-1000.image.fits
+rms = 1.7 mJy/beam
+molecules = CH3OH
 
