--- a/configs/IRAS_18182-1433.cfg
+++ b/configs/IRAS_18182-1433.cfg
@@ -4,6 +4,7 @@ ra = 18h21m08.9782s
 dec = -14d31m47.6103s
 frame = icrs
 basedir = /data/share/binary_project/IRAS_18182/IRAS_18182-1433
+cubesdir = /Volumes/Pegasus32 R8/dihca/source_data/clean_cubes/
 distance = 3.6 kpc
 vlsr = 59.0 km/s
 
@@ -86,4 +87,10 @@ radius = 0.2336453412343538 arcsec
 ra = 18h21m08.8488s
 dec = -14d31m52.26s
 frame = icrs
+
+[b6_c5c8_spw0_1000]
+type = spectral_cube
+file = ${cubesdir}/c5c8_CH3OH/IRAS_18182-1433_spw0_0-1000.image.fits
+rms = 1.4 mJy/beam
+molecules = CH3OH
 
