--- a/configs/IRAS_18337-0743.cfg
+++ b/configs/IRAS_18337-0743.cfg
@@ -4,6 +4,7 @@ ra = 18h36m40.97s
 dec = -7d39m09.1213s
 frame = icrs
 basedir = /data/share/binary_project/G24.6/IRAS_18337-0743
+cubesdir = /Volumes/Pegasus32 R8/dihca/source_data/clean_cubes/
 distance = 3.8 kpc
 vlsr = 60.0 km/s
 
@@ -102,4 +103,10 @@ radius = 0.18847647942946424 arcsec
 ra = 18h36m40.7185s
 dec = -07d39m13.421s
 frame = icrs
+
+[b6_c5c8_spw0_1000]
+type = spectral_cube
+file = ${cubesdir}/c5c8_CH3OH/IRAS_18337-0743_spw0_0-1000.image.fits
+rms = 2.3 mJy/beam
+molecules = CH3OH
 
