--- a/configs/IRDC_182231243.cfg
+++ b/configs/IRDC_182231243.cfg
@@ -4,6 +4,7 @@ ra = 18h25m08.5519s
 dec = -12d45m23.7204s
 frame = icrs
 basedir = /data/share/binary_project/IRAS_18182/IRDC_182231243
+cubesdir = /Volumes/Pegasus32 R8/dihca/source_data/clean_cubes/
 distance = 3.7 kpc
 vlsr = 45.3 km/s
 
@@ -126,4 +127,10 @@ radius = 0.2126777722911226 arcsec
 ra = 18h25m08.4599s
 dec = -12d45m26.4s
 frame = icrs
+
+[b6_c5c8_spw0_1000]
+type = spectral_cube
+file = ${cubesdir}/c5c8_CH3OH/IRDC_182231243_spw0_0-1000.image.fits
+rms = 1.3 mJy/beam
+molecules = CH3OH
 
