--- a/configs/NGC6334I.cfg
+++ b/configs/NGC6334I.cfg
@@ -4,6 +4,7 @@ ra = 17h20m53.4187s
 dec = -35d46m57.8977s
 frame = icrs
 basedir = /data/share/binary_project/NGC_6334/NGC6334I
+cubesdir = /Volumes/Pegasus32 R8/dihca/source_data/clean_cubes/
 distance = 1.7 kpc
 vlsr = -8.0 km/s
 
@@ -198,4 +199,10 @@ radius = 0.13434347973244154 arcsec
 ra = 17h20m53.1426s
 dec = -35d47m02.358s
 frame = icrs
+
+[b6_c5c8_spw0_1000]
+type = spectral_cube
+file = ${cubesdir}/c5c8_CH3OH/NGC6334I_spw0_0-1000.image.fits
+rms = 1.8 mJy/beam
+molecules = CH3OH
 
