--- a/configs/NGC_6334_I_N.cfg
+++ b/configs/NGC_6334_I_N.cfg
@@ -4,6 +4,7 @@ ra = 17h20m54.5923s
 dec = -35d45m17.3688s
 frame = icrs
 basedir = /data/share/binary_project/NGC_6334/NGC_6334_I_N
+cubesdir = /Volumes/Pegasus32 R8/dihca/source_data/clean_cubes/
 distance = 1.7 kpc
 vlsr = -5.0 km/s
 
@@ -294,4 +295,10 @@ radius = 0.1135409634909072 arcsec
 ra = 17h20m54.8498s
 dec = -35d45m03.763s
 frame = icrs
+
+[b6_c5c8_spw0_1000]
+type = spectral_cube
+file = ${cubesdir}/c5c8_CH3OH/NGC_6334_I_N_spw0_0-1000.image.fits
+rms = 1.6 mJy/beam
+molecules = CH3OH
 
