--- a/configs/G11.1-0.12.cfg
+++ b/configs/G11.1-0.12.cfg
@@ -4,6 +4,7 @@ ra = 18h10m28.2485s
 dec = -19d22m30.3194s
 frame = icrs
 basedir = /home/myso/share/binary_project/IRAS_18089/G11.1-0.12
+cubesdir = /Volumes/Pegasus32 R8/dihca/source_data/clean_cubes/
 distance = 3.5 kpc
 vlsr = 30.0 km/s
 
@@ -46,4 +47,10 @@ radius = 0.2203230756027063 arcsec
 ra = 18h10m28.0563s
 dec = -19d22m35.67s
 frame = icrs
+
+[b6_c5c8_spw0_1000]
+type = spectral_cube
+file = ${cubesdir}/c5c8_CH3OH/G11.1-0.12_spw0_0-1000.image.fits
+rms = 1.2 mJy/beam
+molecules = CH3OH
 
