--- a/configs/G11.92-0.61.cfg
+++ b/configs/G11.92-0.61.cfg
@@ -4,6 +4,7 @@ ra = 18h13m58.1106s
 dec = -18d54m20.2s
 frame = icrs
 basedir = /home/myso/share/binary_project/IRAS_18089/G11.92-0.61
+cubesdir = /Volumes/Pegasus32 R8/dihca/source_data/clean_cubes/
 distance = 3.4 kpc
 vlsr = 35.0 km/s
 
@@ -150,4 +151,10 @@ radius = 0.20310825007717195 arcsec
 ra = 18h13m58.1536s
 dec = -18d54m18.54s
 frame = icrs
+
+[b6_c5c8_spw0_1000]
+type = spectral_cube
+file = ${cubesdir}/c5c8_CH3OH/G11.92-0.61_spw0_0-1000.image.fits
+rms = 1.2 mJy/beam
+molecules = CH3OH
 
