--- a/configs/G14.22-0.50_S.cfg
+++ b/configs/G14.22-0.50_S.cfg
@@ -4,6 +4,7 @@ ra = 18h18m13.3496s
 dec = -16d57m23.929s
 frame = icrs
 basedir = /data/share/binary_project/G14.22/G14.22-0.50_S
+cubesdir = /Volumes/Pegasus32 R8/dihca/source_data/clean_cubes/
 distance = 2.0 kpc
 vlsr = 22.0 km/s
 
@@ -94,4 +95,10 @@ radius = 0.255572276753446 arcsec
 ra = 18h18m13.3747s
 dec = -16d57m14.74s
 frame = icrs
+
+[b6_c5c8_spw0_1000]
+type = spectral_cube
+file = ${cubesdir}/c5c8_CH3OH/G14.22-0.50_S_spw0_0-1000.image.fits
+rms = 1.5 mJy/beam
+molecules = CH3OH
 
