--- a/configs/G335.579-0.272.cfg
+++ b/configs/G335.579-0.272.cfg
@@ -4,6 +4,7 @@ ra = 16h30m58.7671s
 dec = -48d43m53.8718s
 frame = icrs
 basedir = /home/myso/share/binary_project/G333_G335/G335.579-0.272
+cubesdir = /Volumes/Pegasus32 R8/dihca/source_data/clean_cubes/
 distance = 3.25 kpc
 vlsr = -46.9 km/s
 
@@ -54,4 +55,10 @@ radius = 0.20867389014910323 arcsec
 ra = 16h30m57.8705s
 dec = -48d44m01.5148s
 frame = icrs
+
+[b6_c5c8_spw0_1000]
+type = spectral_cube
+file = ${cubesdir}/c5c8_CH3OH/G335.579-0.272_spw0_0-1000.image.fits
+rms = 1.8 mJy/beam
+molecules = CH3OH
 
