--- a/configs/G335.78+0.17.cfg
+++ b/configs/G335.78+0.17.cfg
@@ -4,6 +4,7 @@ ra = 16h29m47.3349s
 dec = -48d15m52.2623s
 frame = icrs
 basedir = /data/share/binary_project/G336.01/G335.78+0.17
+cubesdir = /Volumes/Pegasus32 R8/dihca/source_data/clean_cubes/
 distance = 3.8 kpc
 vlsr = -49.5 km/s
 
@@ -158,4 +159,10 @@ radius = 0.22708192698185986 arcsec
 ra = 16h29m46.9673s
 dec = -48d15m51.542s
 frame = icrs
+
+[b6_c5c8_spw0_1000]
+type = spectral_cube
+file = ${cubesdir}/c5c8_CH3OH/G335.78+0.17_spw0_0-1000.image.fits
+rms = 2.0 mJy/beam
+molecules = CH3OH
 
