--- a/configs/G34.43+0.24.cfg
+++ b/configs/G34.43+0.24.cfg
@@ -4,6 +4,7 @@ ra = 18h53m18.0158s
 dec = +1d25m25.4883s
 frame = icrs
 basedir = /data/share/binary_project/source_data/G34.43+0.24
+cubesdir = /Volumes/Pegasus32 R8/dihca/source_data/clean_cubes/
 distance = 1.6 kpc
 vlsr = 58.4 km/s
 
@@ -136,3 +137,10 @@ type = spectral_cube
 file = ${basedir}/yclean_config8/G34.43+0.24_spw3_2/autoG34.43+0.24_spw0_2.tc_final.image.fits
 #rms = 1.48 mJy/beam
 molecules = CH3CN HC3N
+
+[b6_c5c8_spw0_1000]
+type = spectral_cube
+file = ${cubesdir}/c5c8_CH3OH/G34.43+0.24_spw0_0-1000.image.fits
+rms = 1.6 mJy/beam
+molecules = CH3OH
+
