--- a/configs/G34.43+0.24MM2.cfg
+++ b/configs/G34.43+0.24MM2.cfg
@@ -4,6 +4,7 @@ ra = 18h53m18.5505s
 dec = +1d24m45.1286s
 frame = icrs
 basedir = /data/share/binary_project/G35/G34.43+0.24MM2
+cubesdir = /Volumes/Pegasus32 R8/dihca/source_data/clean_cubes/
 distance = 1.6 kpc
 vlsr = 57.6 km/s
 
@@ -246,4 +247,10 @@ radius = 0.19446134443289614 arcsec
 ra = 18h53m18.7345s
 dec = +01d24m42.798s
 frame = icrs
+
+[b6_c5c8_spw0_1000]
+type = spectral_cube
+file = ${cubesdir}/c5c8_CH3OH/G34.43+0.24MM2_spw0_0-1000.image.fits
+rms = 1.7 mJy/beam
+molecules = CH3OH
 
