--- a/configs/G343.12-0.06.cfg
+++ b/configs/G343.12-0.06.cfg
@@ -4,6 +4,7 @@ ra = 16h58m17.2085s
 dec = -42d52m07.4129s
 frame = icrs
 basedir = /data/share/binary_project/G343_G351/G343.12-0.06
+cubesdir = /Volumes/Pegasus32 R8/dihca/source_data/clean_cubes/
 distance = 2.0 kpc
 vlsr = -30.4 km/s
 
@@ -310,4 +311,10 @@ radius = 0.12945661631441083 arcsec
 ra = 16h58m16.9188s
 dec = -42d52m05.596s
 frame = icrs
+
+[b6_c5c8_spw0_1000]
+type = spectral_cube
+file = ${cubesdir}/c5c8_CH3OH/G343.12-0.06_spw0_0-1000.image.fits
+rms = 1.4 mJy/beam
+molecules = CH3OH
 
