--- a/configs/G35.03+0.35_A.cfg
+++ b/configs/G35.03+0.35_A.cfg
@@ -4,6 +4,7 @@ ra = 18h54m00.6512s
 dec = +2d01m19.3389s
 frame = icrs
 basedir = /data/share/binary_project/source_data/G35.03+0.35_A
+cubesdir = /Volumes/Pegasus32 R8/dihca/source_data/clean_cubes/
 distance = 3.2 kpc
 #vlsr = 48.0 km/s
 vlsr = 45.94 km/s
@@ -161,3 +162,10 @@ type = spectral_cube
 file = ${basedir}/yclean_config8/G35.03+0.35_A_spw3/G35.03+0.35_A_spw0_2/autoG35.03+0.35_A_spw0_2.tc_final.image.fits
 #rms = 1.48 mJy/beam
 molecules = CH3CN HC3N
+
+[b6_c5c8_spw0_1000]
+type = spectral_cube
+file = ${cubesdir}/c5c8_CH3OH/G35.03+0.35_A_spw0_0-1000.image.fits
+rms = 1.6 mJy/beam
+molecules = CH3OH
+
