--- a/configs/G35.13-0.74.cfg
+++ b/configs/G35.13-0.74.cfg
@@ -4,6 +4,7 @@ ra = 18h58m06.1369s
 dec = +1d37m07.4283s
 frame = icrs
 basedir = /data/share/binary_project/G35/G35.13-0.74
+cubesdir = /Volumes/Pegasus32 R8/dihca/source_data/clean_cubes/
 distance = 2.2 kpc
 vlsr = 35.0 km/s
 
@@ -118,4 +119,10 @@ radius = 0.19149229459272601 arcsec
 ra = 18h58m06.3464s
 dec = +01d37m09.398s
 frame = icrs
+
+[b6_c5c8_spw0_1000]
+type = spectral_cube
+file = ${cubesdir}/c5c8_CH3OH/G35.13-0.74_spw0_0-1000.image.fits
+rms = 1.8 mJy/beam
+molecules = CH3OH
 
