--- a/configs/G35.20-0.74_N.cfg
+++ b/configs/G35.20-0.74_N.cfg
@@ -4,6 +4,7 @@ ra = 18h58m12.9531s
 dec = +1d40m37.3686s
 frame = icrs
 basedir = /data/share/binary_project/source_data/G35.20-0.74_N
+cubesdir = /Volumes/Pegasus32 R8/dihca/source_data/clean_cubes/
 distance = 2.2 kpc
 #vlsr = 30.0 km/s
 vlsr = 35.9 km/s
@@ -241,3 +242,10 @@ type = spectral_cube
 file = ${basedir}/yclean_config8/G35.20-0.74_N_spw3/G35.20-0.74_N_spw0_2/autoG35.20-0.74_N_spw0.tc_final.image.fits
 rms = 1.9 mJy/beam
 molecules = CH3CN HC3N
+
+[b6_c5c8_spw0_1000]
+type = spectral_cube
+file = ${cubesdir}/c5c8_CH3OH/G35.20-0.74_N_spw0_0-1000.image.fits
+rms = 1.7 mJy/beam
+molecules = CH3OH
+
