--- a/configs/IRAS_181511208.cfg
+++ b/configs/IRAS_181511208.cfg
@@ -4,6 +4,7 @@ ra = 18h17m58.1234s
 dec = -12d07m24.7604s
 frame = icrs
 basedir = /data/share/binary_project/IRAS_18182/IRAS_181511208
+cubesdir = /Volumes/Pegasus32 R8/dihca/source_data/clean_cubes/
 distance = 3.0 kpc
 vlsr = 32.8 km/s
 
@@ -134,4 +135,10 @@ radius = 0.24504930122032462 arcsec
 ra = 18h17m58.0133s
 dec = -12d07m24.81s
 frame = icrs
+
+[b6_c5c8_spw0_1000]
+type = spectral_cube
+file = ${cubesdir}/c5c8_CH3OH/IRAS_181511208_spw0_0-1000.image.fits
+rms = 1.2 mJy/beam
+molecules = CH3OH
 
