--- a/configs/W33A.cfg
+++ b/configs/W33A.cfg
@@ -4,6 +4,7 @@ ra = 18h14m39.5097s
 dec = -17d52m00.139s
 frame = icrs
 basedir = /data/share/binary_project/source_data/W33A
+cubesdir = /Volumes/Pegasus32 R8/dihca/source_data/clean_cubes/
 distance = 3.8 kpc
 vlsr = 37.9 km/s
 
@@ -208,3 +209,10 @@ type = spectral_cube
 file = ${basedir}/yclean_config8/W33A_spw3/W33A_spw0_2/autoW33A_spw0_2.tc_final.image.fits
 rms = 1.48 mJy/beam
 molecules = CH3CN HC3N
+
+[b6_c5c8_spw0_1000]
+type = spectral_cube
+file = ${cubesdir}/c5c8_CH3OH/G10.62-0.38_spw0_0-1000.image.fits
+rms = 1.2 mJy/beam
+molecules = CH3OH
+
