--- a/configs/G29.96-0.02.cfg
+++ b/configs/G29.96-0.02.cfg
@@ -4,6 +4,7 @@ ra = 18h46m03.7779s
 dec = -2d39m22.38s
 frame = icrs
 basedir = /data/share/binary_project/G34.43/G29.96-0.02
+sourcedata = /Volumes/Pegasus32 R8/dihca/source_data
 cubesdir = /Volumes/Pegasus32 R8/dihca/source_data/clean_cubes/
 distance = 3.5 kpc
 vlsr = 98.0 km/s
@@ -143,6 +144,10 @@ radius = 0.22708192698185986 arcsec
 ra = 18h46m03.8481s
 dec = -02d39m20.74s
 frame = icrs
+
+[b6_c8_continuum]
+type = fits_file
+file = ${sourcedata}/continuum/G29.96-0.02.config8.cont_avg.selfcal_0.5_hogbom.image.fits
 
 [b6_c5c8_spw0_1000]
 type = spectral_cube
