--- a/configs/G333.12-0.56.cfg
+++ b/configs/G333.12-0.56.cfg
@@ -4,6 +4,7 @@ ra = 16h21m35.3742s
 dec = -50d40m56.5841s
 frame = icrs
 basedir = /data/share/binary_project/G336.01/G333.12-0.56
+sourcedata = /Volumes/Pegasus32 R8/dihca/source_data
 cubesdir = /Volumes/Pegasus32 R8/dihca/source_data/clean_cubes/
 distance = 2.4 kpc
 vlsr = -56.4 km/s
@@ -231,6 +232,10 @@ radius = 0.22454461911061827 arcsec
 ra = 16h21m35.9655s
 dec = -50d40m48.394s
 frame = icrs
+
+[b6_c8_continuum]
+type = fits_file
+file = ${sourcedata}/continuum/G333.12-0.56.config8.selfcal.cont_avg.robust0.5.image.fits
 
 [b6_c5c8_spw0_1000]
 type = spectral_cube
