--- a/configs/G333.23-0.06.cfg
+++ b/configs/G333.23-0.06.cfg
@@ -4,6 +4,7 @@ ra = 16h19m51.1737s
 dec = -50d15m11.7494s
 frame = icrs
 basedir = /data/share/binary_project/source_data/G333.23-0.06
+sourcedata = /Volumes/Pegasus32 R8/dihca/source_data
 cubesdir = /Volumes/Pegasus32 R8/dihca/source_data/clean_cubes/
 distance = 3.7 kpc
 vlsr = -87.04 km/s
@@ -202,7 +203,7 @@ frame = icrs
 
 [b6_c8_continuum]
 type = fits_file
-file = ${basedir}/final_data/config8/G333.23-0.06.config8.cont_avg.selfcal_0.5_hogbom.image.fits
+file = ${sourcedata}/continuum/G333.23-0.06.config8.cont_avg.selfcal_0.5_hogbom.image.fits
 
 [b6_c8_spw0_1]
 type = spectral_cube
