--- a/configs/G333.46-0.16.cfg
+++ b/configs/G333.46-0.16.cfg
@@ -4,6 +4,7 @@ ra = 16h21m20.1764s
 dec = -50d09m46.3722s
 frame = icrs
 basedir = /data/share/binary_project/G336.01/G333.46-0.16
+sourcedata = /Volumes/Pegasus32 R8/dihca/source_data
 cubesdir = /Volumes/Pegasus32 R8/dihca/source_data/clean_cubes/
 distance = 2.4 kpc
 vlsr = -42.5 km/s
@@ -183,6 +184,10 @@ radius = 0.22708192698185986 arcsec
 ra = 16h21m20.6301s
 dec = -50d09m47.522s
 frame = icrs
+
+[b6_c8_continuum]
+type = fits_file
+file = ${sourcedata}/continuum/G333.46-0.16.config8.cont_avg.selfcal_0.5_hogbom.image.fits
 
 [b6_c5c8_spw0_1000]
 type = spectral_cube
