--- a/configs/G335.78+0.17.cfg
+++ b/configs/G335.78+0.17.cfg
@@ -4,6 +4,7 @@ ra = 16h29m47.3349s
 dec = -48d15m52.2623s
 frame = icrs
 basedir = /data/share/binary_project/G336.01/G335.78+0.17
+sourcedata = /Volumes/Pegasus32 R8/dihca/source_data
 cubesdir = /Volumes/Pegasus32 R8/dihca/source_data/clean_cubes/
 distance = 3.8 kpc
 vlsr = -49.5 km/s
@@ -159,6 +160,10 @@ radius = 0.22708192698185986 arcsec
 ra = 16h29m46.9673s
 dec = -48d15m51.542s
 frame = icrs
+
+[b6_c8_continuum]
+type = fits_file
+file = ${sourcedata}/continuum/G335.78+0.17.config8.selfcal.cont_avg.robust0.5.image.fits
 
 [b6_c5c8_spw0_1000]
 type = spectral_cube
