--- a/configs/G336.01-0.82.cfg
+++ b/configs/G336.01-0.82.cfg
@@ -6,6 +6,7 @@ ra = 16h35m09.261s
 dec = -48d46m47.66s
 frame = icrs
 basedir = /data/share/binary_project/source_data/G336.01-0.82
+sourcedata = /Volumes/Pegasus32 R8/dihca/source_data
 cubesdir = /Volumes/Pegasus32 R8/dihca/source_data/clean_cubes/
 distance = 3.1 kpc
 vlsr = -47.2 km/s
@@ -226,9 +227,13 @@ ra = 16h35m09.0531s
 dec = -48d46m48.999s
 frame = icrs
 
+#[b6_c8_continuum]
+#type = fits_file
+#file = ${basedir}/final_data/config8/G336.01-0.82.config8.cont_avg.selfcal_0.5_hogbom.image.fits
+#
 [b6_c8_continuum]
 type = fits_file
-file = ${basedir}/final_data/config8/G336.01-0.82.config8.cont_avg.selfcal_0.5_hogbom.image.fits
+file = ${sourcedata}/continuum/G336.01-0.82.config8.cont_avg.selfcal_0.5_hogbom.image.fits
 
 [b6_c8_spw0_0_1000]
 type = spectral_cube
