--- a/configs/G34.43+0.24.cfg
+++ b/configs/G34.43+0.24.cfg
@@ -4,6 +4,7 @@ ra = 18h53m18.0158s
 dec = +1d25m25.4883s
 frame = icrs
 basedir = /data/share/binary_project/source_data/G34.43+0.24
+sourcedata = /Volumes/Pegasus32 R8/dihca/source_data
 cubesdir = /Volumes/Pegasus32 R8/dihca/source_data/clean_cubes/
 distance = 1.6 kpc
 vlsr = 58.4 km/s
@@ -106,7 +107,7 @@ frame = icrs
 
 [b6_c8_continuum]
 type = fits_file
-file = ${basedir}/pbclean/G34.43+0.24.config8.selfcal.cont_avg.robust0.5.image.fits
+file = ${sourcedata}/continuum/G34.43+0.24.config8.cont_avg.selfcal_0.5_hogbom.image.fits
 
 [b6_c8_spw0]
 type = spectral_cube
