--- a/configs/G35.20-0.74_N.cfg
+++ b/configs/G35.20-0.74_N.cfg
@@ -4,6 +4,7 @@ ra = 18h58m12.9531s
 dec = +1d40m37.3686s
 frame = icrs
 basedir = /data/share/binary_project/source_data/G35.20-0.74_N
+sourcedata = /Volumes/Pegasus32 R8/dihca/source_data
 cubesdir = /Volumes/Pegasus32 R8/dihca/source_data/clean_cubes/
 distance = 2.2 kpc
 #vlsr = 30.0 km/s
@@ -211,7 +212,7 @@ frame = icrs
 
 [b6_c8_continuum]
 type = fits_file
-file = ${basedir}/pbclean/G35.20-0.74_N.config8.selfcal.cont_avg.robust0.5.image.fits
+file = ${sourcedata}/continuum/G35.20-0.74_N.config8.cont_avg.selfcal_0.5_hogbom.image.fits
 
 [b6_c8_spw0]
 type = spectral_cube
