--- a/configs/G351.77-0.54.cfg
+++ b/configs/G351.77-0.54.cfg
@@ -4,6 +4,7 @@ ra = 17h26m42.5335s
 dec = -36d09m17.3875s
 frame = icrs
 basedir = /data/share/binary_project/G343_G351/G351.77-0.54
+sourcedata = /Volumes/Pegasus32 R8/dihca/source_data
 cubesdir = /Volumes/Pegasus32 R8/dihca/source_data/clean_cubes/
 distance = 2.2 kpc
 vlsr = -3.6 km/s
@@ -191,6 +192,10 @@ radius = 0.19446134443289614 arcsec
 ra = 17h26m42.4031s
 dec = -36d09m14.398s
 frame = icrs
+
+[b6_c8_continuum]
+type = fits_file
+file = ${sourcedata}/continuum/G351.77-0.54.config8.cont_avg.selfcal_0.5_hogbom.image.fits
 
 [b6_c5c8_spw0_1000]
 type = spectral_cube
