--- a/configs/IRAS_18337-0743.cfg
+++ b/configs/IRAS_18337-0743.cfg
@@ -104,6 +104,10 @@ ra = 18h36m40.7185s
 dec = -07d39m13.421s
 frame = icrs
 
+[b6_c8_continuum]
+type = fits_file
+file = ${sourcedata}/continuum/IRAS_18337-0743.config8.selfcal.cont_avg.robust0.5.image.fits
+
 [b6_c5c8_spw0_1000]
 type = spectral_cube
 file = ${cubesdir}/c5c8_CH3OH/IRAS_18337-0743_spw0_0-1000.image.fits
