--- a/configs/G335.579-0.272.cfg
+++ b/configs/G335.579-0.272.cfg
@@ -4,6 +4,7 @@ ra = 16h30m58.7671s
 dec = -48d43m53.8718s
 frame = icrs
 basedir = /home/myso/share/binary_project/G333_G335/G335.579-0.272
+sourcedata = /Volumes/Pegasus32 R8/dihca/source_data
 cubesdir = /Volumes/Pegasus32 R8/dihca/source_data/clean_cubes/
 distance = 3.25 kpc
 vlsr = -46.9 km/s
@@ -55,6 +56,10 @@ radius = 0.20867389014910323 arcsec
 ra = 16h30m57.8705s
 dec = -48d44m01.5148s
 frame = icrs
+
+[b6_c8_continuum]
+type = fits_file
+file = ${sourcedata}/continuum/G335.579-0.272.config8.cont_avg.selfcal_0.5_hogbom.image.fits
 
 [b6_c5c8_spw0_1000]
 type = spectral_cube
