--- a/configs/G35.03+0.35_A.cfg
+++ b/configs/G35.03+0.35_A.cfg
@@ -4,6 +4,7 @@ ra = 18h54m00.6512s
 dec = +2d01m19.3389s
 frame = icrs
 basedir = /data/share/binary_project/source_data/G35.03+0.35_A
+sourcedata = /Volumes/Pegasus32 R8/dihca/source_data
 cubesdir = /Volumes/Pegasus32 R8/dihca/source_data/clean_cubes/
 distance = 3.2 kpc
 #vlsr = 48.0 km/s
@@ -131,7 +132,7 @@ frame = icrs
 
 [b6_c8_continuum]
 type = fits_file
-file = ${basedir}/pbclean/G35.03+0.35_A.config8.selfcal.cont_avg.robust0.5.image.fits
+file = ${sourcedata}/continuum/G35.03+0.35_A.config8.cont_avg.selfcal_0.5_hogbom.image.fits
 
 [b6_c8_spw0]
 type = spectral_cube
