--- a/configs/NGC6334I.cfg
+++ b/configs/NGC6334I.cfg
@@ -4,6 +4,7 @@ ra = 17h20m53.4187s
 dec = -35d46m57.8977s
 frame = icrs
 basedir = /data/share/binary_project/NGC_6334/NGC6334I
+sourcedata = /Volumes/Pegasus32 R8/dihca/source_data
 cubesdir = /Volumes/Pegasus32 R8/dihca/source_data/clean_cubes/
 distance = 1.7 kpc
 vlsr = -8.0 km/s
@@ -199,6 +200,10 @@ radius = 0.13434347973244154 arcsec
 ra = 17h20m53.1426s
 dec = -35d47m02.358s
 frame = icrs
+
+[b6_c8_continuum]
+type = fits_file
+file = ${sourcedata}/continuum/NGC6334I.config8.cont_avg.selfcal_0.5_hogbom.image.fits
 
 [b6_c5c8_spw0_1000]
 type = spectral_cube
