--- a/configs/IRAS_18337-0743.cfg
+++ b/configs/IRAS_18337-0743.cfg
@@ -4,6 +4,7 @@ ra = 18h36m40.97s
 dec = -7d39m09.1213s
 frame = icrs
 basedir = /data/share/binary_project/G24.6/IRAS_18337-0743
+sourcedata = /Volumes/Pegasus32 R8/dihca/source_data
 cubesdir = /Volumes/Pegasus32 R8/dihca/source_data/clean_cubes/
 distance = 3.8 kpc
 vlsr = 60.0 km/s
