Add continuum to 900kHz sources

--- a/configs/G11.1-0.12.cfg
+++ b/configs/G11.1-0.12.cfg
@@ -4,6 +4,7 @@ ra = 18h10m28.2485s
 dec = -19d22m30.3194s
 frame = icrs
 basedir = /home/myso/share/binary_project/IRAS_18089/G11.1-0.12
+sourcedata = /Volumes/Pegasus32 R8/dihca/source_data
 cubesdir = /Volumes/Pegasus32 R8/dihca/source_data/clean_cubes/
 distance = 3.5 kpc
 vlsr = 30.0 km/s
@@ -47,6 +48,10 @@ radius = 0.2203230756027063 arcsec
 ra = 18h10m28.0563s
 dec = -19d22m35.67s
 frame = icrs
+
+[b6_c8_continuum]
+type = fits_file
+file = ${sourcedata}/continuum/G11.1-0.12.config8.cont_avg.selfcal_0.5_hogbom.image.fits
 
 [b6_c5c8_spw0_1000]
 type = spectral_cube
