--- a/configs/G24.60+0.08.cfg
+++ b/configs/G24.60+0.08.cfg
@@ -96,6 +96,6 @@ file = ${sourcedata}/continuum/G24.60+0.08.config8.selfcal.cont_avg.robust0.5.im
 [b6_c5c8_spw0_1000]
 type = spectral_cube
 file = ${cubesdir}/c5c8_CH3OH/G24.60+0.08_spw0_0-1000.image.fits
-#rms = 2.4 mJy/beam
+rms = 2.4 mJy/beam
 molecules = CH3OH
 
