--- a/configs/G34.43+0.24MM2.cfg
+++ b/configs/G34.43+0.24MM2.cfg
@@ -4,6 +4,7 @@ ra = 18h53m18.5505s
 dec = +1d24m45.1286s
 frame = icrs
 basedir = /data/share/binary_project/G35/G34.43+0.24MM2
+sourcedata = /Volumes/Pegasus32 R8/dihca/source_data
 cubesdir = /Volumes/Pegasus32 R8/dihca/source_data/clean_cubes/
 distance = 1.6 kpc
 vlsr = 57.6 km/s
@@ -247,6 +248,10 @@ radius = 0.19446134443289614 arcsec
 ra = 18h53m18.7345s
 dec = +01d24m42.798s
 frame = icrs
+
+[b6_c8_continuum]
+type = fits_file
+file = ${sourcedata}/continuum/G34.43+0.24MM2.config8.selfcal.cont_avg.robust0.5.image.fits
 
 [b6_c5c8_spw0_1000]
 type = spectral_cube
