--- a/configs/W33A.cfg
+++ b/configs/W33A.cfg
@@ -4,6 +4,7 @@ ra = 18h14m39.5097s
 dec = -17d52m00.139s
 frame = icrs
 basedir = /data/share/binary_project/source_data/W33A
+sourcedata = /Volumes/Pegasus32 R8/dihca/source_data
 cubesdir = /Volumes/Pegasus32 R8/dihca/source_data/clean_cubes/
 distance = 3.8 kpc
 vlsr = 37.9 km/s
@@ -176,9 +177,13 @@ ra = 18h14m39.1601s
 dec = -17d52m06.46s
 frame = icrs
 
+#[b6_c8_continuum]
+#type = fits_file
+#file = ${basedir}/final_data/config8/W33A.config8.cont_avg.selfcal_0.5_hogbom.image.fits
+
 [b6_c8_continuum]
 type = fits_file
-file = ${basedir}/final_data/config8/W33A.config8.cont_avg.selfcal_0.5_hogbom.image.fits
+file = ${sourcedata}/continuum/W33A.config8.cont_avg.selfcal_0.5_hogbom.image.fits
 
 [b6_c8_spw0]
 type = spectral_cube
