--- a/configs/G10.62-0.38.cfg
+++ b/configs/G10.62-0.38.cfg
@@ -4,6 +4,8 @@ ra = 18h10m28.6071s
 dec = -19d55m49.4602s
 frame = icrs
 basedir = /home/myso/share/binary_project/IRAS_18089/G10.62-0.38
+sourcedata = /Volumes/Pegasus32 R8/dihca/source_data
+cubesdir = /Volumes/Pegasus32 R8/dihca/source_data/clean_cubes/
 distance = 3.5 kpc
 vlsr = -2.0 km/s
 
@@ -246,4 +248,14 @@ radius = 0.19673963037461772 arcsec
 ra = 18h10m29.0341s
 dec = -19d55m50.6s
 frame = icrs
+
+[b6_c8_continuum]
+type = fits_file
+file = ${sourcedata}/continuum/G10.62-0.38.config8.cont_avg.selfcal_0.5_hogbom.image.fits
+
+[b6_c5c8_spw0_1000]
+type = spectral_cube
+file = ${cubesdir}/c5c8_CH3OH/G10.62-0.38_spw0_0-1000.image.fits
+rms = 1.2 mJy/beam
+molecules = CH3OH
 
