--- a/configs/G11.92-0.61.cfg
+++ b/configs/G11.92-0.61.cfg
@@ -4,6 +4,7 @@ ra = 18h13m58.1106s
 dec = -18d54m20.2s
 frame = icrs
 basedir = /home/myso/share/binary_project/IRAS_18089/G11.92-0.61
+sourcedata = /Volumes/Pegasus32 R8/dihca/source_data
 cubesdir = /Volumes/Pegasus32 R8/dihca/source_data/clean_cubes/
 distance = 3.4 kpc
 vlsr = 35.0 km/s
@@ -151,6 +152,10 @@ radius = 0.20310825007717195 arcsec
 ra = 18h13m58.1536s
 dec = -18d54m18.54s
 frame = icrs
+
+[b6_c8_continuum]
+type = fits_file
+file = ${sourcedata}/continuum/G11.92-0.61.config8.cont_avg.selfcal_0.5_hogbom.image.fits
 
 [b6_c5c8_spw0_1000]
 type = spectral_cube
