--- a/configs/G5.89-0.37.cfg
+++ b/configs/G5.89-0.37.cfg
@@ -4,6 +4,7 @@ ra = 18h00m30.4581s
 dec = -24d04m00.9891s
 frame = icrs
 basedir = /home/myso/share/binary_project/IRAS_18089/G5.89-0.37
+sourcedata = /Volumes/Pegasus32 R8/dihca/source_data
 cubesdir = /Volumes/Pegasus32 R8/dihca/source_data/clean_cubes/
 distance = 3.0 kpc
 vlsr = 10.0 km/s
@@ -183,6 +184,10 @@ radius = 0.19802974013474633 arcsec
 ra = 18h00m30.1858s
 dec = -24d04m07.759s
 frame = icrs
+
+[b6_c8_continuum]
+type = fits_file
+file = ${sourcedata}/continuum/G5.89-0.37.config8.cont_avg.selfcal_0.5_hogbom.image.fits
 
 [b6_c5c8_spw0_1000]
 type = spectral_cube
