--- a/configs/IRAS_18182-1433.cfg
+++ b/configs/IRAS_18182-1433.cfg
@@ -4,6 +4,7 @@ ra = 18h21m08.9782s
 dec = -14d31m47.6103s
 frame = icrs
 basedir = /data/share/binary_project/IRAS_18182/IRAS_18182-1433
+sourcedata = /Volumes/Pegasus32 R8/dihca/source_data
 cubesdir = /Volumes/Pegasus32 R8/dihca/source_data/clean_cubes/
 distance = 3.6 kpc
 vlsr = 59.0 km/s
@@ -87,6 +88,10 @@ radius = 0.2336453412343538 arcsec
 ra = 18h21m08.8488s
 dec = -14d31m52.26s
 frame = icrs
+
+[b6_c8_continuum]
+type = fits_file
+file = ${sourcedata}/continuum/IRAS_18182-1433.config8.cont_avg.selfcal_0.5_hogbom.image.fits
 
 [b6_c5c8_spw0_1000]
 type = spectral_cube
