--- a/configs/IRDC_182231243.cfg
+++ b/configs/IRDC_182231243.cfg
@@ -4,6 +4,7 @@ ra = 18h25m08.5519s
 dec = -12d45m23.7204s
 frame = icrs
 basedir = /data/share/binary_project/IRAS_18182/IRDC_182231243
+sourcedata = /Volumes/Pegasus32 R8/dihca/source_data
 cubesdir = /Volumes/Pegasus32 R8/dihca/source_data/clean_cubes/
 distance = 3.7 kpc
 vlsr = 45.3 km/s
@@ -127,6 +128,10 @@ radius = 0.2126777722911226 arcsec
 ra = 18h25m08.4599s
 dec = -12d45m26.4s
 frame = icrs
+
+[b6_c8_continuum]
+type = fits_file
+file = ${sourcedata}/continuum/IRDC_182231243.config8.cont_avg.selfcal_0.5_hogbom.image.fits
 
 [b6_c5c8_spw0_1000]
 type = spectral_cube
