--- a/configs/IRAS_180891732.cfg
+++ b/configs/IRAS_180891732.cfg
@@ -4,6 +4,8 @@ ra = 18h11m51.4549s
 dec = -17d31m28.8108s
 frame = icrs
 basedir = /data/share/binary_project/source_data/IRAS_180891732
+sourcedata = /Volumes/Pegasus32 R8/dihca/source_data
+cubesdir = /Volumes/Pegasus32 R8/dihca/source_data/clean_cubes/
 distance = 3.6 kpc
 vlsr = 32.9 km/s
 
@@ -113,7 +115,8 @@ frame = icrs
 
 [b6_c8_continuum]
 type = fits_file
-file = ${basedir}/final_data/config8/IRAS_180891732.config8.cont_avg.selfcal_0.5_hogbom.image.fits
+#file = ${basedir}/final_data/config8/IRAS_180891732.config8.cont_avg.selfcal_0.5_hogbom.image.fits
+file = ${sourcedata}/continuum/IRAS_180891732.config8.cont_avg.selfcal_0.5_hogbom.image.fits
 
 #[b6_c8_spw1_640_1420]
 #type = spectral_cube
@@ -171,6 +174,12 @@ file = ${basedir}/yclean_concat/IRAS_180891732_spw0/autoIRAS_180891732_spw0.tc_f
 rms = 1.4 mJy/beam
 molecules = CH3OH (13)CH3OH SO2
 
+[b6_c5c8_spw0_1000]
+type = spectral_cube
+file = ${cubesdir}/c5c8_CH3OH/IRAS_180891732_spw0.image.fits
+rms = 1.4 mJy/beam
+molecules = CH3OH
+
 [b6_c5c8_spw1]
 type = spectral_cube
 file = ${basedir}/yclean_concat/IRAS_180891732_spw1/autoIRAS_180891732_spw0.tc_final.image.fits
@@ -194,3 +203,4 @@ type = spectral_cube
 file = ${basedir}/yclean_concat/IRAS_180891732_spw3_2/autoIRAS_180891732_spw0_2.tc_final.image.fits
 #rms = 1.7 mJy/beam
 molecules = CH3CN HC3N
+
