Unset c5c8 cubes of IRAS18089

--- a/configs/IRAS_180891732.cfg
+++ b/configs/IRAS_180891732.cfg
@@ -118,26 +118,6 @@ type = fits_file
 #file = ${basedir}/final_data/config8/IRAS_180891732.config8.cont_avg.selfcal_0.5_hogbom.image.fits
 file = ${sourcedata}/continuum/IRAS_180891732.config8.cont_avg.selfcal_0.5_hogbom.image.fits
 
-#[b6_c8_spw1_640_1420]
-#type = spectral_cube
-#file = ${basedir}/yclean_config8/IRAS_180891732_spw1_640_1420/autoIRAS_180891732_spw1.tc_final.image.fits
-#molecules = (13)CH3CN CH3OH CH3CHO HNCO
-#
-#[b6_c8_spw2_0_781]
-#type = spectral_cube
-#file = ${basedir}/yclean_config8/IRAS_180891732_spw2_0_781/autoIRAS_180891732_spw2.tc_final.image.fits
-#molecules = SiO CH3OH CH3OCHO SO2 (13)CH3OH
-#
-#[b6_c8_spw3_2500_3500]
-#type = spectral_cube
-#file = ${basedir}/yclean_config8/IRAS_180891732_spw3_2500_3500/autoIRAS_180891732_spw3.tc_final.image.fits
-#molecules = CH3CN CH2CHCN (13)CO
-#
-#[b6_c8_spw3_920_1700]
-#type = spectral_cube
-#file = ${basedir}/yclean_config8/IRAS_180891732_spw3_920_1700/autoIRAS_180891732_spw3.tc_final.image.fits
-#molecules = HNCO HC3N
-
 [b6_c8_spw0]
 type = spectral_cube
 file = ${basedir}/yclean_config8/IRAS_180891732_spw0/autoIRAS_180891732_spw0.tc_final.image.fits
@@ -168,11 +148,11 @@ file = ${basedir}/yclean_config8/IRAS_180891732_spw3/IRAS_180891732_spw0_2/autoI
 rms = 1.7 mJy/beam
 molecules = CH3CN HC3N
 
-[b6_c5c8_spw0]
-type = spectral_cube
-file = ${basedir}/yclean_concat/IRAS_180891732_spw0/autoIRAS_180891732_spw0.tc_final.image.fits
-rms = 1.4 mJy/beam
-molecules = CH3OH (13)CH3OH SO2
+#[b6_c5c8_spw0]
+#type = spectral_cube
+#file = ${basedir}/yclean_concat/IRAS_180891732_spw0/autoIRAS_180891732_spw0.tc_final.image.fits
+#rms = 1.4 mJy/beam
+#molecules = CH3OH (13)CH3OH SO2
 
 [b6_c5c8_spw0_1000]
 type = spectral_cube
@@ -180,27 +160,27 @@ file = ${cubesdir}/c5c8_CH3OH/IRAS_180891732_spw0.image.fits
 rms = 1.4 mJy/beam
 molecules = CH3OH
 
-[b6_c5c8_spw1]
-type = spectral_cube
-file = ${basedir}/yclean_concat/IRAS_180891732_spw1/autoIRAS_180891732_spw0.tc_final.image.fits
-rms = 1.4 mJy/beam
-molecules = CH3OH (13)CH3OH CH3CHO HNCO NH2CHO (13)CH3CN
-
-[b6_c5c8_spw2]
-type = spectral_cube
-file = ${basedir}/yclean_concat/IRAS_180891732_spw2/autoIRAS_180891732_spw0.tc_final.image.fits
-rms = 1.2 mJy/beam
-molecules = CH3OH SiO
-
-[b6_c5c8_spw3_1]
-type = spectral_cube
-file = ${basedir}/yclean_concat/IRAS_180891732_spw3_1/autoIRAS_180891732_spw0_1.tc_final.image.fits
-#rms = 1.7 mJy/beam
-molecules = C(18)O
-
-[b6_c5c8_spw3_2]
-type = spectral_cube
-file = ${basedir}/yclean_concat/IRAS_180891732_spw3_2/autoIRAS_180891732_spw0_2.tc_final.image.fits
-#rms = 1.7 mJy/beam
-molecules = CH3CN HC3N
+#[b6_c5c8_spw1]
+#type = spectral_cube
+#file = ${basedir}/yclean_concat/IRAS_180891732_spw1/autoIRAS_180891732_spw0.tc_final.image.fits
+#rms = 1.4 mJy/beam
+#molecules = CH3OH (13)CH3OH CH3CHO HNCO NH2CHO (13)CH3CN
+#
+#[b6_c5c8_spw2]
+#type = spectral_cube
+#file = ${basedir}/yclean_concat/IRAS_180891732_spw2/autoIRAS_180891732_spw0.tc_final.image.fits
+#rms = 1.2 mJy/beam
+#molecules = CH3OH SiO
+#
+#[b6_c5c8_spw3_1]
+#type = spectral_cube
+#file = ${basedir}/yclean_concat/IRAS_180891732_spw3_1/autoIRAS_180891732_spw0_1.tc_final.image.fits
+##rms = 1.7 mJy/beam
+#molecules = C(18)O
+#
+#[b6_c5c8_spw3_2]
+#type = spectral_cube
+#file = ${basedir}/yclean_concat/IRAS_180891732_spw3_2/autoIRAS_180891732_spw0_2.tc_final.image.fits
+##rms = 1.7 mJy/beam
+#molecules = CH3CN HC3N
 
