--- a/configs/W33A.cfg
+++ b/configs/W33A.cfg
@@ -217,7 +217,7 @@ molecules = CH3CN HC3N
 
 [b6_c5c8_spw0_1000]
 type = spectral_cube
-file = ${cubesdir}/c5c8_CH3OH/G10.62-0.38_spw0_0-1000.image.fits
+file = ${cubesdir}/c5c8_CH3OH/W33A_spw0_0-1000.image.fits
 rms = 1.2 mJy/beam
 molecules = CH3OH
 
